# CLI-Finance-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  finman  main.cpp  run.sh
database/: user_data.json
include/: hash.h  input_output.h  option.h  user.h
source/: CMakeLists.txt  main.cpp
src/: hash.cpp  input_output.cpp  option.cpp  user.cpp
